--- a/recipe project/recipe.html
+++ b/recipe project/recipe.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>My Recipe Project</title>
+    <link href="./style.css" rel="stylesheet"/>
+
 </head>
 <body>
    <header>
